# fdapi-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.MD  PLANNING.MD  PR.MD  README.MD  TASKS.MD  pyproject.toml  setup.cfg
src/fdapi_mcp/: __init__.py  client.py  config.py  exceptions.py  mcp_server.py  models.py  server.py
tests/: __init__.py  test_config.py  test_exceptions.py  test_integration_client.py  test_models.py
